Prevent overlap of edit dropdown on hidden topics - Bootstrap theme fixes #324 and #389 - credit to Charles Fulton.

--- a/style/moodle.css
+++ b/style/moodle.css
@@ -8167,9 +8167,11 @@ fieldset[disabled] .path-admin .roleassigntable input[type='text']
 .course-content ul li.section.main .right
 {
     display: none;
-}.course-content ul li.section.hidden
+}.course-content ul li.section.hidden .sectionname > span,
+.course-content ul li.section.hidden .content > div,
+.course-content ul li.section.hidden .activity .activityinstance
 {
-    opacity: .5;filter: alpha(opacity=50);
+    opacity: .5;
 }.course-content ul.topics li.section .content,
 .course-content ul.weeks li.section .content
 {
